<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="htsr_title">Touch Responsiveness</string>
    <string name="htsr_summary">Increases touch polling rate to decrease latency</string>
    <string name="fch_title">USB fast charge</string>
    <string name="fch_summary">Increase current when usb charge to 900mA. It may, theoretically, damage your hardware </string>
    <!-- Device specific settings -->
    <string name="device_settings_app_name">Advanced settings</string>
  <!-- Device Extras -->
    <string name="device_title">SELinux status</string>
    <string name="device_summary">Toggle SELinux setting</string>
<!-- Selinux Switch -->
    <string name="selinux_explanation_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk.</string>
    <string name="selinux_category">SELinux</string>
    <string name="selinux_mode_title">SELinux mode</string>
    <string name="selinux_permissive_summary">Permissive</string>
    <string name="selinux_enforcing_summary">Enforcing</string>
    <string name="selinux_persistence_title">Persist across reboots</string>
    <string name="selinux_persistence_summary">Restore the above set sepolicy mode on each boot</string>
    <string name="selinux_permissive_toast_title">Selinux set to permissive!</string>
    <string name="selinux_enforcing_toast_title">Selinux set to enforcing!</string>
    <!-- TTL Tile -->
    <string name="ttl_tile_label">Post-Routing TTL</string>
    <string name="ttl_tile_dialog_title">Options</string>
    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Missing superuser access!</string>
     <!-- DC dimming settings -->
    <string name="dc_dimming_enable_title">Anti-Flicker Mode</string>
    <string name="dc_dimming_enable_summary">DC Dimming reduces eye strain in low light conditions (Note: reduce image quality and color production)</string>
    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is not currently supported by the kernel</string>
    <!-- Popup camera -->
    <string name="popup_title">Front camera settings</string>
    <string name="popup_summary">Led light and sound options</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Enable LED light while the front camera appears and retracts</string>
    <string name="popup_sound_title">Sound effect</string>
    <string name="popup_sound_none">Disabled</string>
    <string name="popup_sound_muqin">Xylophone</string>
    <string name="popup_sound_yingyan">Condor</string>
    <string name="popup_sound_mofa">Magic</string>
    <string name="popup_sound_jijia">Mecha</string>
    <string name="popup_sound_chilun">Gearwheel</string>
    <string name="popup_sound_cangmen">Cabin door</string>
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_times_calibrate">Couldn\'t close front camera multiple times. Try calibrating the camera</string>
    <string name="popup_camera_popup_failed_times_calibrate">Couldn\'t open front camera multiple times. Try calibrating the camera</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now</string>
    <string name="stop_operate_camera_frequently">You\'re opening the front camera too frequently</string>
    <string name="takeback_camera_front_failed">Couldn\'t close front camera. Try again</string>
    <string name="popup_camera_front_failed">Couldn\'t open front camera. Try again</string>
    <string name="popup_led_color_title">LED color</string>
    <string name="popup_led_color_blue">Blue</string>
    <string name="popup_led_color_cyan">Cyan</string>
    <string name="popup_led_color_green">Green</string>
    <string name="popup_led_color_purple">Purple</string>
    <string name="popup_led_color_red">Red</string>
    <string name="popup_led_color_yellow">Yellow</string>
    <string name="popup_led_color_white">White</string>

    <!-- Fastcharge settings -->
    <string name="fastcharge_title">Fastcharging</string>
    <string name="fastcharge_summary">Configure fastcharge options</string>
    <string name="fastcharge_category_title">Fastcharge options</string>
    <string name="fastcharge_normal_title">Charging current (not saved after reboot)</string>
    <string name="fastcharge_normal_summary">Select charging current for wall chargers</string>
    <string name="fastcharge_normal_30w_summary">Fast charging</string>
    <string name="fastcharge_normal_15w_summary">Medium charging</string>
    <string name="fastcharge_normal_8w_summary">Slow charging</string>
    <string name="fastcharge_usb_title">Enable for USB</string>
    <string name="fastcharge_usb_summary">Enable fastcharging when using USB ports</string>
    <string name="fastcharge_normal_unavailable">Fast charging not supported on this device</string>
    <string name="fastcharge_usb_unavailable">USB fast charging not supported on this device</string>
    <string name="fastcharge_thermal_title">Fast charge</string>
    <string name="fastcharge_thermal_summary">Enable fast charging for wall chargers</string>
    <string name="fastcharge_thermal_warning">Warning: Increasing thermal limits may reduce battery lifespan and cause higher temperatures. Use at your own risk!</string>
    <string name="fastcharge_bypass_title">Bypass charging</string>
    <string name="fastcharge_bypass_summary">Directly power device from charger (may reduce battery wear)</string>
    <string name="fastcharge_bypass_warning">Warning: Bypass charging may cause unstable power delivery in some cases. Use at your own risk!</string>
    <string name="fastcharge_bypass_unavailable">Bypass charging not supported on this device</string>

     <!-- Charge bypass strings -->
    <string name="charge_bypass_title">Bypass charging</string>
    <string name="charge_bypass_summary">Enable direct charging, bypassing battery</string>
    <string name="charge_bypass_warning">Warning: Bypass charging may cause increased device temperature or battery damage. Use with caution.</string>
    <string name="charge_bypass_unavailable">Bypass charging is not supported on this device</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that the speaker is lightly blocked. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that headphones are unplugged</string>
    
    

</resources>
